@@ -919,7 +919,16 @@
 
     }
     else {
+
+      if (all())
       idx = lapply(1:self$dimension, function(d) {
+        unique_recs = unique(as.character(self$records[ ,1]))
+        if (!all(unique_recs == self$getUELs(d)[1:length(unique_recs)])) {
+          stop(paste0("Cannot create dense array because the order of the ", 
+          "symbol UELs from symbol records does not match the data order.",
+          "Hint: unused UELs may be affecting the order. The users can ",
+          "reorder UELs by calling ", self$name, "$reorderUELs()\n"))
+        }
         return(as.numeric(factor(self$records[,d], 
         levels = levels(self$records[, d]))) )
       })
